welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:43: error: Unit does not take parameters
growGarden();
          ^